add endpoints for tickets
